--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ input:-moz-placeholder {
 	width: 300px;
 	height: 100%;
 	margin: 0 auto;
-	padding-top: 20px;
+	padding-top: 40px;
 
 	color: #fff;
 }
@@ -127,6 +127,18 @@ input:-moz-placeholder {
 		width: 25%;
 
 		text-align: center;
+	}
+
+	.hi_score{
+		position: absolute;
+		top: 14px;
+		left: 0;
+		right: 0;
+		z-index: 50;
+
+		text-align: center;
+		color: #ccc;
+		font: 12px arial, sans-serif;
 	}
 
 .level_begin_label{
